# awesome-llm-apps-1

./: App.jsx  README.md  auto_sync.py  bond_intelligence.json  bond_intelligence_organ.py  bootstrap.jsx  context_governor.py  convert_copilot_history.py  engine.py  entities_graph.json  find_chrome.py  find_chrome_deep.py  foia.json  foia_organ.py  housing.json  housing_organ.py  intelligence.py  land_rights_organ.py  land_rights_pack.json  main.py  main_scrape.py  module_migrator.py  output.json  pre-commit  pyproject.toml  requirements.txt  sample_chat_history.json  segment_router.py  shadow_cleaner.py  situation_engine.py  tasks.json  timeline_api.py  timeline_ui.jsx  traffic_court.json  wake.py
config/: selectors.json
data/: copilot-in-Microsoft-365-apps-activity.csv  faiss_index  store.db  timeline.json  windows-apps-copilot-activity-history.csv
incoming_chats/: Building a Chat History Harvester Bot.json  Building a Chat History Harvester Bot_entities.json  Building a Chat History Harvester Bot_summary.json  Building a Chat History Harvester Bot_topics.json  Choosing the Right CPU Option on Hugging Face.json  Choosing the Right CPU Option on Hugging Face_entities.json  Choosing the Right CPU Option on Hugging Face_summary.json  Choosing the Right CPU Option on Hugging Face_topics.json  Clarifying More Free Document Edits.json  Clarifying More Free Document Edits_entities.json  Clarifying More Free Document Edits_summary.json  Clarifying More Free Document Edits_topics.json  Creating a Local AI Assistant Like OpenJarvis.json  Exploring Google Drive Insights.json  (+42 more)
(+32 files in other folders)
